--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.20.4+build.3
 loader_version=0.16.2
 
 # Mod Properties
-mod_version=1.0.1-fabric-0.97+-mc1.20.4-SNAPSHOT
+mod_version=1.0.1-fabric-0.97+-mc1.20.4
 maven_group=com.luke.stashwalker
 archives_base_name=stashwalker
 
