--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,14 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.3
-loader_version=0.16.2
+minecraft_version=1.21.1
+yarn_mappings=1.21.1+build.3
+loader_version=0.16.5
+
+# Fabric API
+fabric_version=0.103.0+1.21.1
 
 # Mod Properties
-mod_version=1.0.2-fabric-0.97+-mc1.20.4-SNAPSHOT
+mod_version=1.0.2-fabric-0.103.0+-mc1.21.1-SNAPSHOT
 maven_group=com.luke.stashwalker
 archives_base_name=stashwalker
-
-# Dependencies
-fabric_version=0.97.1+1.20.4
