--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,15 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	maven {
+
+        url = "https://maven.shedaniel.me/"
+    }
+
+	maven {
+
+		url "https://maven.terraformersmc.com/releases"
+	}
 }
 
 loom {
@@ -38,6 +47,10 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+ 	modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
+	modImplementation "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
+	modImplementation "com.google.code.gson:gson:${project.gson_version}"
 }
 
 processResources {
