--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,9 @@ org.gradle.parallel=true
 minecraft_version=1.21.1
 yarn_mappings=1.21.1+build.3
 loader_version=0.16.5
+mod_menu_version=11.0.2
+cloth_config_version=15.0.130
+gson_version=2.8.9
 
 # Fabric API
 fabric_version=0.103.0+1.21.1
