--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,9 @@ dependencies {
  	modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
 	modImplementation "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
 	modImplementation "com.google.code.gson:gson:${project.gson_version}"
+
+	include "com.terraformersmc:modmenu:${project.mod_menu_version}"
+	include "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
 }
 
 processResources {
