Add latest pre-built jars to releases folder.

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,6 @@ gson_version=2.8.9
 fabric_version=0.103.0+1.21.1
 
 # Mod Properties
-mod_version=1.2.6-fabric-0.103.0+-mc1.21.1T
+mod_version=1.2.6-fabric-0.103.0+-mc1.21.1
 maven_group=com.luke.stashwalker
 archives_base_name=stashwalker
